--- a/src/GlacierCreates.Wpf.Tests.Interactive/Views/ShellView.xaml
+++ b/src/GlacierCreates.Wpf.Tests.Interactive/Views/ShellView.xaml
@@ -1,13 +1,18 @@
-<Window x:Class="GlacierCreates.Wpf.Tests.Interactive.Views.ShellView"
+<Window x:Class="GlacierCrates.Wpf.Tests.Interactive.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Width="400"
+        Height="300"
         >
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="4" />
+            <Setter Property="Padding" Value="4,2,4,2" />
+        </Style>
+    </Window.Resources>
+    <StackPanel Orientation="Vertical" Margin="8">
 
-    <Grid Background="White">
-        <TextBlock Text="Hello Caliburn Micro!"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="20" />
-    </Grid>
+        <Button x:Name="TestTransitingContentControl" Content="Test TransitingContentControl" />
 
+    </StackPanel>
 </Window>
