--- a/src/GlacierCreates.Wpf.Tests.Interactive/Views/ShellView.xaml
+++ b/src/GlacierCreates.Wpf.Tests.Interactive/Views/ShellView.xaml
@@ -1,8 +1,9 @@
 <Window x:Class="GlacierCrates.Wpf.Tests.Interactive.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Width="400"
+        Width="300"
         Height="300"
+        WindowStartupLocation="CenterScreen"
         >
     <Window.Resources>
         <Style TargetType="Button">
